--- a/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
+++ b/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
@@ -2,9 +2,15 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-<p *ngIf="!forecasts"><em>Loading...</em></p>
+<p *ngIf="!surveydetails"><em>Loading...</em></p>
 
-<table class='table' *ngIf="forecasts">
+<label class='lable' *ngIf="surveydetails">{{surveydetails.questionnaireId}}</label>
+
+<div class="interview" *ngFor="let surveydetail of surveydetails.questionnaireItems">
+  {{surveydetail.subjectText}}
+</div>
+
+<table class='table' *ngIf="surveydetails">
   <thead>
     <tr>
       <th>Date</th>
