--- a/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
+++ b/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
@@ -9,15 +9,15 @@
     <div class="subject">{{surveydetail.subjectText}}</div>
     <div class="interview" *ngFor="let interviewdetail of surveydetail.questionnaireItems">
       <div class="question">-{{interviewdetail.questionItemText}}</div>
-      <textarea *ngIf="interviewdetail.answerCategoryType == 2"></textarea>
-      <div>
-        <select name="selection" *ngIf="interviewdetail.answerCategoryType == 0" (change)="onSelect($event.target.value)" >
-          <option>--Select Answer--</option>
-          <option *ngFor="let categorydetail of interviewdetail.questionnaireItems" class="category"
-                  value="{'surveyId':{{surveydetails.questionnaireId}},'subjectId':{{surveydetail.subjectId}},'questionId':{{interviewdetail.questionId}},'categoryId': {{categorydetail.answerId}}}">
-            {{categorydetail.categoryText}}
-          </option>
-        </select>
+      <input type="text" *ngIf="interviewdetail.answerCategoryType == 2"
+             (change)="openAnswerGiven(surveydetails.questionnaireId, surveydetail.subjectId, interviewdetail.questionId, $event.target.value)" value="{{openanswer}}">
+      <div *ngFor="let categorydetail of interviewdetail.questionnaireItems">
+        <fieldset *ngIf="interviewdetail.answerCategoryType == 0"
+                  (change)="onSelect($event.target.value)">
+          <input type="radio" name="{{interviewdetail.questionId}}"
+                 value="{'surveyId':{{surveydetails.questionnaireId}},'subjectId':{{surveydetail.subjectId}},'questionId':{{interviewdetail.questionId}},'categoryId': {{categorydetail.answerId}}}"/>
+          {{categorydetail.categoryText}}
+        </fieldset>        
       </div>
     </div>
   </div>
