--- a/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
+++ b/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
@@ -1,36 +1,45 @@
-<h1>Interview Details</h1>
+<div>
+  <h1>Interview Details</h1>
 
-<!--<p *ngIf="!surveydetails"><em>Loading...</em></p>-->
+  <!--<p *ngIf="!surveydetails"><em>Loading...</em></p>-->
 
-
-<input type="button" value="Start" (click)="start()" *ngIf="!isFinished && !interviewStarted" />
-
-<input type="button" value="Continue" (click)="continue()" *ngIf="!isFinished && !interviewStarted"/>
-<input type="text" (change)="respondentIdGiven($event.target.value)" value="{{respondentId}}" *ngIf="!isFinished && !interviewStarted"/>
-
-<label *ngIf="!isFinished && interviewStarted">Your respondent id is: {{respondentId}}. Remember this id as it will allow you to continue on the survey if not completed.</label>
-<div><label *ngIf="noAnswers">No answers given</label></div>
-<button type="Button" (click)="language('en')" *ngIf="!isFinished && interviewStarted">English</button>
-<button type="Button" (click)="language('nl')" *ngIf="!isFinished && interviewStarted">Dutch</button>
-<form (ngSubmit)="onsubmit()" *ngIf="!isFinished && interviewStarted">
-  <div class="survey" *ngFor="let surveydetail of surveydetails.questionnaireItems">
-    <div class="subject">{{surveydetail.subjectText}}</div>
-    <div class="interview" *ngFor="let interviewdetail of surveydetail.questionnaireItems">
-      <div class="question">-{{interviewdetail.questionItemText}}</div>
-      <input type="text"
-             *ngIf="interviewdetail.answerCategoryType == 2"
-             (change)="openAnswerGiven(surveydetails.questionnaireId, surveydetail.subjectId, interviewdetail.questionId, $event.target.value)" value="{{openanswer}}">
-      <div *ngFor="let categorydetail of interviewdetail.questionnaireItems">
-          <input *ngIf="interviewdetail.answerCategoryType == 0"
-                 (change)="onSelect($event.target.value)"
-                 type="radio"
-                 name="{{interviewdetail.questionId}}"
-                 value="{'surveyId':{{surveydetails.questionnaireId}},'subjectId':{{surveydetail.subjectId}},'questionId':{{interviewdetail.questionId}},'categoryId': {{categorydetail.answerId}}}"/>
-          {{categorydetail.categoryText}}      
-      </div>
-    </div>
+  <div>
+    <input type="button" value="Start" (click)="start()" *ngIf="!isFinished && !interviewStarted" class="btn btn-info btn-block my-4"/>
+    <input type="button" value="Continue" (click)="continue()" *ngIf="!isFinished && !interviewStarted" class="btn btn-info btn-block my-4"/>
+    <input type="text" placeholder="Respondent Id" (change)="respondentIdGiven($event.target.value)" value="{{respondentId}}" *ngIf="!isFinished && !interviewStarted" class="form-control form-control-lg" />
   </div>
-  <input type="submit" *ngIf="surveydetails">
-</form>
+  <div>
+    <label *ngIf="!isFinished && interviewStarted">Your respondent id is: {{respondentId}}. Remember this id as it will allow you to continue on the survey if not completed.</label>
+  </div>
+  <div>
+    <button type="Button" (click)="language('en')" *ngIf="!isFinished && interviewStarted">English</button>
+    <button type="Button" (click)="language('nl')" *ngIf="!isFinished && interviewStarted">Dutch</button>
+  </div>
 
-<label *ngIf="isFinished">You submitted your survey</label>
+    <form (ngSubmit)="onsubmit()" *ngIf="!isFinished && interviewStarted">
+      <div class="survey" *ngFor="let surveydetail of surveydetails.questionnaireItems">
+        <div class="subject">{{surveydetail.subjectText}}</div>
+        <div class="interview" *ngFor="let interviewdetail of surveydetail.questionnaireItems">
+          <div class="question">-{{interviewdetail.questionItemText}}</div>
+          <input class="form-control form-control-lg"
+                 type="text"
+                 *ngIf="interviewdetail.answerCategoryType == 2"
+                 (change)="openAnswerGiven(surveydetails.questionnaireId, surveydetail.subjectId, interviewdetail.questionId, $event.target.value)" value="{{openanswer}}">
+          <div *ngFor="let categorydetail of interviewdetail.questionnaireItems">
+            <input *ngIf="interviewdetail.answerCategoryType == 0"
+                   (change)="onSelect($event.target.value)"
+                   type="radio"
+                   name="{{interviewdetail.questionId}}"
+                   value="{'surveyId':{{surveydetails.questionnaireId}},'subjectId':{{surveydetail.subjectId}},'questionId':{{interviewdetail.questionId}},'categoryId': {{categorydetail.answerId}}}" />
+            {{categorydetail.categoryText}}
+          </div>
+        </div>
+      </div>
+      <div>
+        <label *ngIf="noAnswers" class="alert alert-danger">You have not answered any questions. Please review your answers</label>
+      </div>
+      <input type="submit" *ngIf="surveydetails" class="btn btn-info btn-block my-4">
+    </form>
+
+  <label *ngIf="isFinished" class="alert alert-success">You submitted your survey</label>
+</div>
