--- a/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
+++ b/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
@@ -24,18 +24,26 @@
         <h2 class="subject maintext">{{surveydetail.subjectText}}</h2>
         <div class="interview" *ngFor="let interviewdetail of surveydetail.questionnaireItems">
           <h3 class="question maintext">{{interviewdetail.questionItemText}}</h3>
+
           <input class="form-control form-control-lg"
                  type="text"
                  *ngIf="interviewdetail.answerCategoryType == 2"
                  (change)="openAnswerGiven(surveydetails.questionnaireId, surveydetail.subjectId, interviewdetail.questionId, $event.target.value)" value="{{openanswer}}">
-          <div *ngFor="let categorydetail of interviewdetail.questionnaireItems" class="maintext">
-            <input *ngIf="interviewdetail.answerCategoryType == 0"
-                   (change)="onSelect($event.target.value)"
-                   type="radio"
-                   name="{{interviewdetail.questionId}}"
-                   value="{'surveyId':{{surveydetails.questionnaireId}},'subjectId':{{surveydetail.subjectId}},'questionId':{{interviewdetail.questionId}},'categoryId': {{categorydetail.answerId}}}" />
-            {{categorydetail.categoryText}}
+
+
+          <div *ngFor="let categorydetail of interviewdetail.questionnaireItems" class="maintext questions">
+            <div class="questions__question">
+              <input *ngIf="interviewdetail.answerCategoryType == 0"
+                     (change)="onSelect($event.target.value)"
+                     type="radio"
+                     id="{{interviewdetail.questionId}}-{{categorydetail.answerId}}"
+                     name="{{interviewdetail.questionId}}"
+                     value="{'surveyId':{{surveydetails.questionnaireId}},'subjectId':{{surveydetail.subjectId}},'questionId':{{interviewdetail.questionId}},'categoryId': {{categorydetail.answerId}}}" />
+              <label for="{{interviewdetail.questionId}}-{{categorydetail.answerId}}">{{categorydetail.categoryText}}</label>
+            </div>
           </div>
+
+
         </div>
       </div>
       <div>
