--- a/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
+++ b/InterviewPlay/ClientApp/src/app/interview-details/interview-details.component.html
@@ -7,9 +7,10 @@
     <div>
       <input type="button" value="Start" (click)="start()" *ngIf="!isFinished && !interviewStarted" class="btn btn-info btn-block my-4 buttontext" />
       <input type="button" value="Continue" (click)="continue()" *ngIf="!isFinished && !interviewStarted" class="btn btn-info btn-block my-4 buttontext" />
+      <label *ngIf="invalidRespondentId && !isFinished && !interviewStarted" class="alert alert-danger maintext padding">Not a Valid Respondent Id</label>
       <input type="text"
              placeholder="Respondent Id" (change)="respondentIdGiven($event.target.value)" value="{{respondentId}}"
-             *ngIf="!isFinished && !interviewStarted" class="form-control form-control-lg maintext" />
+             *ngIf="!isFinished && !interviewStarted" class="form-control form-control-lg maintext padding" />
     </div>
     <div>
       <label *ngIf="!isFinished && interviewStarted" class="maintext">Your respondent id is: {{respondentId}}. Remember this id as it will allow you to continue on the survey if not completed.</label>
@@ -19,13 +20,13 @@
       <button type="Button" (click)="language('nl')" *ngIf="!isFinished && interviewStarted" class="languagebutton">Dutch</button>
     </div>
 
-    <form (ngSubmit)="onsubmit()" *ngIf="!isFinished && interviewStarted">
+    <form (ngSubmit)="onsubmit()" *ngIf="!isFinished && interviewStarted" ngNativeValidate>
       <div class="survey" *ngFor="let surveydetail of surveydetails.questionnaireItems">
         <h2 class="subject maintext">{{surveydetail.subjectText}}</h2>
         <div class="interview" *ngFor="let interviewdetail of surveydetail.questionnaireItems">
           <h3 class="question maintext">{{interviewdetail.questionItemText}}</h3>
 
-          <input class="form-control form-control-lg"
+          <input class="form-control form-control-lg padding"
                  type="text"
                  *ngIf="interviewdetail.answerCategoryType == 2"
                  (change)="openAnswerGiven(surveydetails.questionnaireId, surveydetail.subjectId, interviewdetail.questionId, $event.target.value)" value="{{openanswer}}">
@@ -36,6 +37,7 @@
               <input *ngIf="interviewdetail.answerCategoryType == 0"
                      (change)="onSelect($event.target.value)"
                      type="radio"
+                     required
                      id="{{interviewdetail.questionId}}-{{categorydetail.answerId}}"
                      name="{{interviewdetail.questionId}}"
                      value="{'surveyId':{{surveydetails.questionnaireId}},'subjectId':{{surveydetail.subjectId}},'questionId':{{interviewdetail.questionId}},'categoryId': {{categorydetail.answerId}}}" />
@@ -47,11 +49,11 @@
         </div>
       </div>
       <div>
-        <label *ngIf="noAnswers" class="alert alert-danger maintext">You have not answered any questions. Please review your answers</label>
+        <label *ngIf="noAnswers" class="alert alert-danger maintext padding">You have not answered any questions. Please review your answers</label>
       </div>
-      <input type="submit" *ngIf="surveydetails" class="btn btn-info btn-block my-4 buttontext">
+      <input type="submit" *ngIf="surveydetails" class="btn btn-info btn-block my-4 buttontext padding">
     </form>
 
-    <label *ngIf="isFinished" class="alert alert-success maintext">You submitted your survey</label>
+    <label *ngIf="isFinished" class="alert alert-success maintext padding">You submitted your survey</label>
   </div>
 </div>
